@@ -1,3 +1,5 @@
+(2002/12/11 - broeker) Get rid of deprecated ={...} style actions in egrep.y.
+	               Use plain {...} instead.
 (2002/10/29 - broeker) Fix bug #588671: disprefs was still 0 if only 1 very
 	               long reference output shown by curses display.
 (2002/08/27 - broeker) Fix bug #600494: use mygetenv() for HOME, and provide
